fix(burgerMenu): added fixes to prevent overflow

--- a/src/components/styles/BurgerMenu.scss
+++ b/src/components/styles/BurgerMenu.scss
@@ -28,6 +28,7 @@
 .bm-cross-button {
   height: 30px !important;
   width: 30px !important;
+  right: -15px !important;
 }
 
 /* Color/shape of close button cross */
@@ -52,10 +53,11 @@ Note: Beware of modifying this element as it can break the animations - you shou
   background: color(soft-background);
   padding: 2.5em 0.7em 0;
   font-size: 1.15em;
-  width: 100%;
+  width: 110%;
   height: 100%;
   display: flex;
   flex-direction: column;
+  // overflow: visible !important;
 }
 
 /* Morph shape necessary with bubble or elastic */
